--- a/Monogame.Rpg.XnaPort/Monogame.Rpg.XnaPort.csproj
+++ b/Monogame.Rpg.XnaPort/Monogame.Rpg.XnaPort.csproj
@@ -1,7 +1,7 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+	  <TargetFramework>net6.0</TargetFramework>
     <PublishReadyToRun>false</PublishReadyToRun>
     <TieredCompilation>false</TieredCompilation>
   </PropertyGroup>
@@ -24,8 +24,10 @@
     <TrimmerRootAssembly Include="Microsoft.Xna.Framework.Content.ContentTypeReader" Visible="false" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="FuncWorks.Mono.XTiled" Version="1.0.0" />
-    <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.0.1641" />
-    <PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.0.1641" />
+    <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.1.*" />
+    <PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.1.*" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\FuncWorks.Mono.XTiled\FuncWorks.Mono.XTiled\FuncWorks.Mono.XTiled.csproj" />
   </ItemGroup>
 </Project>
