--- a/Monogame.Rpg.XnaPort/Monogame.Rpg.XnaPort.csproj
+++ b/Monogame.Rpg.XnaPort/Monogame.Rpg.XnaPort.csproj
@@ -14,6 +14,9 @@
     <None Remove="Icon.bmp" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include=".config\dotnet-tools.json" />
+  </ItemGroup>
+  <ItemGroup>
     <EmbeddedResource Include="Icon.ico" />
     <EmbeddedResource Include="Icon.bmp" />
   </ItemGroup>
